fixed initial bugs with branch complications and fixed layout issues.

--- a/style.css
+++ b/style.css
@@ -62,4 +62,6 @@ body {
 }
 .square {
     background-color: cyan;
+    float: left;
+    border: 1px solid black;
 }
